# migration-utility

./: .env.example  .envrc  .gitattributes  .gitignore  .gitleaks.toml  .markdownlint.json  .mcp.json  AGENTS.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  README.md  TEST_MANIFEST.md  pytest.ini  repo-map.json
lib/: pyproject.toml
lib/shared/: __init__.py  batch_plan.py  block_segmenter.py  catalog.py  catalog_diff.py  catalog_dmf.py  catalog_enrich.py  catalog_models.py  catalog_preservation.py  catalog_writer.py  cli_utils.py  context_helpers.py  db_connect.py  dbt_artifacts.py  ddl_hash.py  deps.py  diagnostic_reviews.py  discover.py  dmf_processing.py  dry_run.py  dry_run_core.py  env_config.py  fixture_materialization.py  freetds.py  generate_model_error_codes.md  generate_sources.py  init.py  init_templates.py  listing_objects_error_codes.md  loader.py  loader_data.py  loader_io.py  loader_parse.py  migrate.py  name_resolver.py  oracle_extract.py  oracle_extract_ddl.py  oracle_extract_queries.py  oracle_extract_services.py  pipeline_status.py  (+16 more)
lib/shared/batch_plan_support/: __init__.py  dashboard.py  diagnostics.py  inventory.py  nodes.py  scheduling.py
lib/shared/catalog_model_support/: __init__.py  base.py  catalogs.py  diagnostics.py  enrichment.py  profile.py  references.py  scoping.py  statements.py
lib/shared/catalog_support/: __init__.py  loaders.py  merge.py  paths.py  references.py  writers.py
lib/shared/cli/: add_seed_table_cmd.py  add_source_table_cmd.py  doctor_drivers_cmd.py  env_check.py  error_handler.py  exclude_table_cmd.py  git_ops.py  main.py  output.py  replicate_source_tables_cmd.py  reset_cmd.py  setup_sandbox_cmd.py  setup_source_cmd.py  setup_target_cmd.py  teardown_sandbox_cmd.py
lib/shared/dbops/: __init__.py  base.py  oracle.py  sql_server.py
lib/shared/diagnostics/: __init__.py  common.py  context.py  registry.py  runner.py  sqlserver.py
lib/shared/diagnostics/common_support/: __init__.py  dependency_checks.py  graph.py  object_checks.py  reference_checks.py
lib/shared/discover_support/: browse.py
lib/shared/dry_run_support/: __init__.py  common.py  excluded_warnings.py  exclusions.py  readiness.py  readiness_context.py  readiness_stages.py  reset.py  reset_files.py  reset_global.py  reset_preserve_catalog.py  reset_stage.py  status.py
lib/shared/generate_sources_support/: __init__.py  candidates.py  sources_yaml.py  staging.py
lib/shared/init_support/: __init__.py  local_env.py  scaffold.py  source_config.py
lib/shared/loader_io_support/: __init__.py  directory.py  indexing.py  load.py  manifest.py
lib/shared/migrate_support/: artifacts.py  context.py  derivation.py
lib/shared/output_models/: __init__.py  catalog_writer.py  discover.py  dry_run.py  generate_sources.py  init.py  migrate.py  model_generation.py  profile.py  refactor.py  replicate_source_tables.py  sandbox.py  target_setup.py  writeback.py
lib/shared/profile_support/: __init__.py  seed.py  table_context.py  view_context.py  writeback.py
lib/shared/refactor_support/: __init__.py  context.py
lib/shared/sandbox/: __init__.py  base.py  oracle.py  oracle_clone.py  oracle_comparison.py  oracle_config.py  oracle_connection.py  oracle_execution.py  oracle_fixtures.py  oracle_lifecycle.py  oracle_lifecycle_core.py  oracle_services.py  sql_server.py  sql_server_clone.py  sql_server_comparison.py  sql_server_config.py  sql_server_connection.py  sql_server_execution.py  sql_server_fixtures.py  sql_server_lifecycle.py  sql_server_lifecycle_core.py  sql_server_services.py
lib/shared/schemas/: README.md  candidate_writers.json  common.json  discover_refs_output.json  discover_show_output.json  fixture_manifest.json  function_catalog.json  manifest.json  migrator_input.json  model_generator_input.json  procedure_catalog.json  profiler_input.json  sandbox_down_output.json  sandbox_status_output.json  scope_input.json  table_catalog.json  test_generator_input.json  test_spec.json  test_spec_output.json
lib/shared/setup_ddl_support/: __init__.py  assembly.py  catalog_write.py  db_extraction.py  db_helpers.py  discovery.py  extract.py  extract_orchestration.py  manifest.py  manifest_io.py  oracle_schema_summary.py  runtime_identity.py  staging.py  staging_signals.py
lib/shared/target_setup_support/: __init__.py  dbt_commands.py  dbt_scaffold.py  runtime.py  seed_commands.py  seed_export.py  seed_rendering.py  seed_specs.py  seeds.py  source_tables.py
lib/shared/test_harness_support/: __init__.py  catalog_write.py  execution.py  manifest.py
lib/tests/: test_env_config.py
mcp/ddl/: pyproject.toml  server.py
mcp/ddl/ddl_mcp_support/: __init__.py  block_segmenter.py  env_config.py  loader.py  loader_data.py  loader_io.py  loader_parse.py  name_resolver.py  routing.py  server_context.py  tool_definitions.py  tool_handlers.py  tsql_utils.py
mcp/ddl/tests/: conftest.py  helpers.py  test_server.py
orchestrator/: pyproject.toml
orchestrator/ddl_mcp/: server.py
orchestrator/mssql_mcp/: Dockerfile  tools.yaml
orchestrator/scoping_agent/: .mcp.json  CLAUDE.md  agent.py  models.py  prompts.py
orchestrator/tests/: test_agent.py  test_models.py
(+2317 files in other folders)
