[project]
name = "shared"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.18",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "sqlglot>=25.0,<26",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "jsonschema>=4.18", "pyodbc>=5.0", "oracledb>=2.0"]
export = ["pyodbc>=5.0"]
oracle = ["oracledb>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]

[project.scripts]
catalog-enrich = "shared.catalog_enrich:app"
discover = "shared.discover:app"
init = "shared.init:app"
migrate = "shared.migrate:app"
profile = "shared.profile:app"
setup-ddl = "shared.setup_ddl:app"
test-harness = "shared.test_harness:app"
migrate-util = "shared.dry_run:app"
generate-sources = "shared.generate_sources:app"
refactor = "shared.refactor:app"

[tool.pytest.ini_options]
testpaths = ["../tests/unit"]
