[project]
name = "ad-migration-shared"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.18",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "sqlglot>=25.0,<26",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=9.0.3", "jsonschema>=4.18", "pyodbc>=5.0", "oracledb>=2.0"]
export = ["pyodbc>=5.0"]
oracle = ["oracledb>=2.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]

[tool.pytest.ini_options]
testpaths = ["../tests/unit"]
