[project]
name = "ddl-mcp"
version = "0.1.3"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "oracledb>=3.0",
    "pytest>=9.0.3",
    "sqlglot>=25.0,<26",
]

[dependency-groups]
dev = [
    "jsonschema>=4.18",
    "pyodbc>=5.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "typer>=0.12",
]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]
markers = [
    "oracle: requires Docker Oracle with SH schema loaded",
    "integration: requires external infrastructure",
]
