[project]
name = "ddl-mcp"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "pytest>=8.0",
    "shared",
    "sqlglot>=25.0,<26",
]

[dependency-groups]
dev = []

[tool.uv.sources]
shared = { path = "../shared", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
