[project]
name = "shared"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "sqlglot>=25.0,<26",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
export = ["pyodbc>=5.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["shared"]

[project.scripts]
discover = "shared.discover:app"

[tool.pytest.ini_options]
testpaths = ["../../../../../tests/ad-migration/migration"]
